fixed position of dark mode button

--- a/style.css
+++ b/style.css
@@ -228,8 +228,11 @@ header .container {
 
 .dark-mode{
 
-    margin-top: 0.3rem;
-    margin-left: 0.3rem;
+    position: fixed;
+    top: 3.8rem;
+    right: 8rem;
+    z-index: 80;
+    border-radius: 50%;
 }
 
 
@@ -375,6 +378,9 @@ header .container {
     border-radius: 50%;
     font-size: 1.1rem;
     transition: 0.3s;
+
+    box-shadow: 0.1rem 0.1rem 0.7rem 0.2rem rgba(127, 124, 124, 0.675),
+    -0.1rem -0.1rem 0.7rem 0.2rem rgba(255, 255, 255, 0.763);
 }
 
 .toggle-btn i {
@@ -383,7 +389,7 @@ header .container {
 
 .toggle-btn:hover {
     /* background: var(--mainColor); */
-    background: var(--backgroundColor);
+    background: var(--mainColor);
 
 }
 
